<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView2"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/imageViewUserIcon"
            android:src="@drawable/icon_user"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/pseudo_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_pseudo"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login_register_text_color"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login_register_text_color"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:background="@color/btn_login_color" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/textViewRegisterLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/btn_login_color"
            android:textSize="15dp"
            android:background="@color/bg_register" />
    </LinearLayout>

</LinearLayout>
    </ScrollView>