<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="1">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/imageViewUserLogo"
                android:src="@drawable/icon_user"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/nom_pharm_reg_plus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_nom_pharm"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_login_register_text_color"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/adresse_pharm_reg_plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_adresse_pharm"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_login_register_text_color"
                android:textColorHint="@color/input_register_hint"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/num_tel_pharm_reg_plus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_num_tel_pharm"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login_register_text_color"
                android:textColorHint="@color/input_register_hint" />

            <!-- Radio Buttons -->

            <!-- Login Button -->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_weight="3.81">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:id="@+id/editTextOuverture"
                    android:textAlignment="center"
                    android:clickable="true"
                    android:hint="Heure ouverture"
                    android:textColorHint="@color/input_register_hint"
                    android:textSize="18dp"
                    android:textColorLink="#ffffff" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editTextFermeture"
                    android:textAlignment="center"
                    android:clickable="true"
                    android:hint="Heure fermeture"
                    android:textColorHint="@color/input_register_hint"
                    android:textSize="18dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/editTextOuverture"
                    android:layout_toRightOf="@+id/editTextOuverture" />
                </RelativeLayout>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Veuillez localiser votre pharmacie précisément sur le map (longue pression)"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/textViewPosition"
                android:textColor="@color/btn_login_color"
                android:textSize="13dp" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
            <fragment
                android:layout_width="325dp"
                android:layout_height="325dp"
                android:name="com.google.android.gms.maps.MapFragment"
                android:id="@+id/localisation_fragment_map_pharmacien" />
            <ImageView
                android:id="@+id/transparent_image"
                android:layout_width="325dp"
                android:layout_height="325dp"
                android:src="@null" />
</RelativeLayout>

            <Button
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:text="@string/uploadBtnText"
                android:id="@+id/buttonUploadAttestation"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:layout_marginTop="8dp"
                />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/btn_login_color"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <!-- Link to Register Screen -->
            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/bg_register"
                android:text="@string/btn_link_to_Register"
                android:textAllCaps="false"
                android:textColor="@color/btn_login_color"
                android:textSize="15dp" />

        </LinearLayout>


</LinearLayout>
</ScrollView>