<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="#03A9F4">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pharmacieProche"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.farouk.mapharmconsdz.PharmacieLocal"
        android:layout_marginTop="169dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:fadingEdgeLength="12dp"
        android:id="@+id/view">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="#03A9F4"
            android:contextClickable="true">

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/pharmacy_name_info"
                android:textColor="#FBE9E7"
                android:typeface="serif"
                android:layout_alignBaseline="@+id/name_label_info"
                android:layout_alignBottom="@+id/name_label_info"
                android:layout_toRightOf="@+id/name_label_info"
                android:layout_toEndOf="@+id/name_label_info"
                android:textSize="15dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/call"
                android:background="@drawable/ic_call_white_24dp"
                android:clickable="true"
                android:typeface="serif"

                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="plain text"
                android:id="@+id/pharmacy_phone_info"
                android:textColor="#FBE9E7"
                android:typeface="serif"
                android:textSize="15dp"
                android:layout_alignTop="@+id/tel_label_info"
                android:layout_alignLeft="@+id/pharmacy_addr_info"
                android:layout_alignStart="@+id/pharmacy_addr_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_pharmacy"
                android:id="@+id/name_label_info"
                android:textColor="#FBE9E7"
                android:textSize="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresse_pharmacy"
                android:id="@+id/textView2"
                android:textColor="#FBE9E7"
                android:textSize="16dp"
                android:layout_above="@+id/tel_label_info"
                android:layout_alignLeft="@+id/name_label_info"
                android:layout_alignStart="@+id/name_label_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:id="@+id/tel_label_info"
                android:textColor="#FBE9E7"
                android:textSize="16dp"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/pharmacy_addr_info"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:typeface="serif"
                android:textColor="#FBE9E7"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ouverture_pharm"
                android:id="@+id/textView4"
                android:layout_below="@+id/pharmacy_phone_info"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="10dp"
                android:typeface="serif"
                android:textColor="#FBE9E7"
                android:textSize="16dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fermeture_pharm"
                android:id="@+id/textView5"
                android:layout_alignBaseline="@+id/call"
                android:layout_alignBottom="@+id/call"
                android:layout_alignLeft="@+id/tel_label_info"
                android:layout_alignStart="@+id/tel_label_info"
                android:typeface="serif"
                android:textColor="#FBE9E7"
                android:textSize="16sp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="7:00"
                android:id="@+id/ouverture"
                android:textSize="16dp"
                android:typeface="monospace"
                android:textColor="#FBE9E7"
                android:layout_above="@+id/call"
                android:layout_alignLeft="@+id/fermeture"
                android:layout_alignStart="@+id/fermeture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="17:00"
                android:id="@+id/fermeture"
                android:textSize="16dp"
                android:typeface="monospace"
                android:textColor="#FBE9E7"
                android:layout_alignTop="@+id/textView5"
                android:layout_toRightOf="@+id/textView4"
                android:layout_toEndOf="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="distance"
                android:id="@+id/pharmacy_destance_info"
                android:typeface="monospace"
                android:textColor="#FBE9E7"
                android:layout_alignBottom="@+id/pharmacy_name_info"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/drawPath"
        android:clickable="true"
        android:typeface="serif"
        android:foregroundTint="@color/btn_login_bg"
        android:foreground="@drawable/ic_directions_white_24dp"
        android:backgroundTint="#50B3E5FC"
        android:layout_alignTop="@+id/pharmacieProche"
        android:layout_alignRight="@+id/view"
        android:layout_alignEnd="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aller_vers_la_pharmacie"
        android:id="@+id/TextFindThePath"
        android:layout_alignBaseline="@+id/drawPath"
        android:layout_alignBottom="@+id/drawPath"
        android:layout_toLeftOf="@+id/drawPath"
        android:layout_toStartOf="@+id/drawPath"
        android:textColor="@color/btn_login_color"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="16dp" />

</RelativeLayout>